Revision history for {{$dist->name}}

{{$NEXT}}

0.05      2013-10-09 16:07:32Z
    - documentation fix: misspelled plugin name in [NoTabsTests]

0.04      2013-09-25 15:33:24Z
    - fix broken test caused by running an autogenerated test in situ and
      confusing FindBin horribly

0.03      2013-09-25 04:33:08Z
    - re-release with fixed compile test

0.02      2013-09-15 03:24:28Z
    - now dies if Test::NoTabs is not present, rather than skipping test
    - develop require prerequisites are now injected into the distribution
    - now includes the list of files to check inside the test, allowing
      customization of files to search via filefinder options; also works
      around issue with Test::NoTabs that tests nothing when the test is two
      levels deep from the dist root (RT#88042)
    - renamed [NoTabsTests] to [Test::NoTabs].

0.01      2010-05-29 15:02:08Z
    - Split off of Dist::Zilla::Plugin::SanityTests.